# seren-llm-council

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: __init__.py  config.py  council.py  main.py  models.py  x402_client.py
docs/: 20251229_publisher_curl.md
tests/: __init__.py  test_api.py  test_config.py  test_council.py  test_integration.py  test_models.py  test_x402_client.py
